add filter component + pokeball animated

--- a/pokedex/src/index.css
+++ b/pokedex/src/index.css
@@ -13,6 +13,8 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 /* Sections
