--- a/pokedex/src/components/Header/Header.module.scss
+++ b/pokedex/src/components/Header/Header.module.scss
@@ -1,31 +1,69 @@
-@import '../../UI/Fonts.module.scss';
-@import '../../UI/Colors.module.scss';
+@import "../../UI/Fonts.module.scss";
+@import "../../UI/Colors.module.scss";
 
 header {
   width: 100vw;
   height: 130px;
   display: flex;
   justify-content: center;
-  align-self: center;
   position: fixed;
   top: 0;
   border-bottom: 1px solid #555;
+  background: $color-background;
+  z-index: 1;
 
-  ul {
+  nav {
     display: flex;
-    justify-content: space-around;
     align-items: center;
-    font-size: 1.7vw;
-    padding: 0;
-    color: rgb(212, 212, 212);
-    font-family: $font-roboto;
-    font-weight: 500;
-    li {
-      list-style-type: none;
-      margin: 2rem;
-      cursor: pointer;
+
+    ul {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      font-size: 1.7vw;
+      padding: 0;
+      color: rgb(212, 212, 212);
+      font-family: $font-roboto;
+      font-weight: 500;
+      li {
+        list-style-type: none;
+        margin: 2rem;
+        cursor: pointer;
+      }
     }
-    
+  }
+
+  img {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    right: 0;
+    align-self: center;
+    margin: 3rem;
+    cursor: pointer;
+  }
+  #pokeball__logo {
+    left: 0;
+    transition: ease 1s .3s;
+    border-radius: 50%;
+    animation: pokeball 1s .3s ease infinite paused;
+    &:hover {
+      animation-play-state:running;
+      box-shadow: 0px 0px 30px 5px rgb(255, 255, 255);
+      left: 20px;
+    }
+  }
+
+  @keyframes pokeball {
+    0% {
+      transform: rotateZ(0deg) skew(0deg);
+    }
+    50% {
+      transform: rotateZ(10800deg) skew(10deg);
+    }
+    0% {
+      transform: rotateZ(0deg) skew(0deg);
+    }
   }
 }
 
