--- a/pokedex/src/components/Pokemons/Pokemons.module.scss
+++ b/pokedex/src/components/Pokemons/Pokemons.module.scss
@@ -1,14 +1,37 @@
+@import '../../UI/Fonts.module.scss';
+
 .cards__section {
-  margin-top: 130px;
+  margin-top: 115px;
+  max-width: 100vw;
   .cards {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     max-width: 100vw;
+    height: calc(100vh - 130px);
     padding: 0;
+    gap: 1vw;
+    overflow-y: scroll;
+    
+
     .card {
       color: white;
       list-style-type: none;
+      font-size: 1.5vw;
+      font-family: $font-roboto;
+      font-weight: 300;
+      cursor: pointer;
+
+      .card__content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          max-width: 70%;
+        }
+      }
     }
   
   }
